# teamlead

./: AGENTS.md  AURA.md  Cargo.toml  Dockerfile.test  GLOSSARY.md  README.md  ROADMAP.md  ai-teamlead  ai-teamlead.yml  init.sh  mise.toml  test-local.sh
.ai-teamlead/: README.md  init.sh  launch-agent.sh  settings.yml
.ai-teamlead/flows/: issue-analysis-flow.md  issue-implementation-flow.md
.ai-teamlead/zellij/: analysis-tab.kdl
.claude/commands/: review-docs.md
.claude/skills/: doc-review-team.md
.github/workflows/: ci.yml
docs/: code-quality.md  config.md  documentation-process.md  documentation-structure.md  governance.md  implementation-plan.md  issue-analysis-flow.md  issue-implementation-flow.md  untrusted-input-security.md
docs/adr/: 0001-repo-local-ai-config.md  0002-standalone-foreground-daemon.md  0003-github-project-status-as-source-of-truth.md  0004-runtime-artifacts-in-git-dir.md  0005-cli-contract-for-poll-and-run.md  0006-use-gh-cli-as-github-integration-layer.md  0007-no-separate-health-interface-in-mvp.md  0008-bind-issue-to-agent-session-uuid.md  0009-deterministic-backlog-ordering.md  0010-use-rust-for-mvp-implementation.md  0011-use-zellij-main-release-in-ci.md  0012-repo-init-command-and-project-contract-layer.md  0013-agent-session-history-as-dialog-source.md  0014-zellij-launch-context-naming.md  0015-versioned-launch-agent-contract.md  (+24 more)
src/: agent_flow.rs  app.rs  cli.rs  complete_stage.rs  config.rs  domain.rs  github.rs  init.rs  lib.rs  main.rs  project_files.rs  repo.rs  runtime.rs  shell.rs  templates.rs  zellij.rs
(+172 files in other folders)
